# car-recognizer

./: .env.example  .gitignore  README.md  auth.py  main.py  pyproject.toml
bucket/: crud.py  policy.py
myauto/: images.py
serverless/: .gitignore  handler.py  serverless.yml.example
